--- a/views/form.ejs
+++ b/views/form.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/article" method="post" style="background-color:cadetblue,;">
+    <form action="" method="post" style="background-color:cadetblue,;">
         <input type="text" name="titleeee" placeholder="Title" style="background-color: rgb(233, 194, 194);font-size: larger;margin-left: 500px;margin-top: 20px;color: rgb(78, 61, 233);"><br><br>
         <textarea name="boody"  placeholder=" 'Body' Please enter your article here ......" rows="20" cols="25" style="background-color: rgb(233, 194, 194);font-size: larger;margin-left: 500px;margin-top: 20px;color:rgb(78, 61, 233);"></textarea><br>
         <input type="submit" value="send" style="background-color: rgb(187, 115, 115);font-size: larger;margin-left: 500px;margin-top: 20px;color: aliceblue;" >
